fixed project update options on mobile screen and adjustment options placement

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,7 +9,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-
+  @include abstracts.respondMax(abstracts.$mobile-large) {
+    padding: 1.5rem 2rem;
+  }
   &__nav-button {
     width: 4rem;
     height: 4rem;
